--- a/01_Courses/web_bootcamp/38_Mongoose_With_Express_CODE/views/products/detail.ejs
+++ b/01_Courses/web_bootcamp/38_Mongoose_With_Express_CODE/views/products/detail.ejs
@@ -8,9 +8,13 @@
 <body>
     <h1><%= product.name %></h1>
     <ul>
-        <li></li>
         <li>Price: <%= product.price %></li>
         <li>Category: <%= product.category %></li>
     </ul>
+    <a href="/products/">All Products</a> | 
+    <a href="/products/<%= product._id %>/edit">Edit</a> | 
+    <form action="/products/<%= product._id %>?_method=DELETE" method="POST">
+        <button>Delete</button>
+    </form>
 </body>
 </html>
