--- a/01_Courses/web_bootcamp/38_Mongoose_With_Express_CODE/views/products/index.ejs
+++ b/01_Courses/web_bootcamp/38_Mongoose_With_Express_CODE/views/products/index.ejs
@@ -9,8 +9,14 @@
     <h1>All Products</h1>
     <ul>
         <% for (let product of products) { %>
-            <li><a href="./<%= product.id %>"><%= product.name %></a></li>
+            <li>
+                <strong><a href="/products/<%= product.id %>"><%= product.name %></a></strong> | 
+                <a href="/products/<%= product.id %>/edit">Edit</a>
+            </li>
         <% }; %>
     </ul>
+    <p>
+        <a href="/products/new">New Products</a>
+    </p>
 </body>
 </html>
