--- a/01_Courses/web_bootcamp/38_Mongoose_With_Express_CODE/views/products/index.ejs
+++ b/01_Courses/web_bootcamp/38_Mongoose_With_Express_CODE/views/products/index.ejs
@@ -6,7 +6,7 @@
     <title>All Products</title>
 </head>
 <body>
-    <h1>All Products</h1>
+    <h1><%= category %> Products</h1>
     <ul>
         <% for (let product of products) { %>
             <li>
