--- a/01_Courses/web_bootcamp/YelpCamp/views/campgrounds/show.ejs
+++ b/01_Courses/web_bootcamp/YelpCamp/views/campgrounds/show.ejs
@@ -1,32 +1,35 @@
 <% layout('layouts/boilerplate.ejs') %>
-<div class="card" style="width: 36rem;">
-  <img src="..." class="card-img-top" alt="...">
-  <div class="card-body">
-    <h5 class="card-title"><%= campground.title %></h5>
-    <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-  </div>
-  <ul class="list-group list-group-flush">
-    <li class="list-group-item">An item</li>
-    <li class="list-group-item">A second item</li>
-    <li class="list-group-item">A third item</li>
-  </ul>
-  <div class="card-body">
-    <a href="#" class="card-link">Card link</a>
-    <a href="#" class="card-link">Another link</a>
+
+<div class="row">
+  <div class="col-6 offset-3">
+    <div class="card">
+      <img src="<%= campground.image %>" class="card-img-top" alt="camp image">
+      <div class="card-body mb-3">
+        <h5 class="card-title"><%= campground.title %></h5>
+        <p class="card-text"><%= campground.description %></p>
+      </div>
+      <ul class="list-group list-group-flush">
+        <li class="list-group-item"><%= campground.location %></li>
+        <li class="list-group-item">$<%= campground.price %></li>
+      </ul>
+      <div class="card-body">
+        <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-warning">Edit</a>
+        <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST"></form>
+          <button class="btn btn-danger">Delete</button>
+        </form>        
+      </div>
+      <div class="card-footer text-muted">
+        2 days ago
+        <a href="/campgrounds/" class="card-link btn btn-primary">All Campgrounds</a>
+      </div>
+    </div>
   </div>
 </div>
 
 
-<h1><%= campground.title %></h1>
-<h2><%= campground.location %></h2>
-<img src="<%= campground.image %>" alt="">
-<p>
-    <%= campground.description %>
-</p>
-<footer>
-    <a href="/campgrounds/">Back</a> | 
-    <a href="/campgrounds/<%= campground._id %>/edit">Edit</a>
-    <form action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
-        <button>Delete</button>
-    </form>            
+
+
+
+<footer>    
+                
 </footer>
