--- a/01_Courses/web_bootcamp/YelpCamp/views/campgrounds/show.ejs
+++ b/01_Courses/web_bootcamp/YelpCamp/views/campgrounds/show.ejs
@@ -14,7 +14,7 @@
       </ul>
       <div class="card-body">
         <a href="/campgrounds/<%= campground._id %>/edit" class="card-link btn btn-warning">Edit</a>
-        <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST"></form>
+        <form class="d-inline" action="/campgrounds/<%= campground._id %>?_method=DELETE" method="POST">
           <button class="btn btn-danger">Delete</button>
         </form>        
       </div>
