--- a/01_Courses/web_bootcamp/YelpCamp/views/campgrounds/show.ejs
+++ b/01_Courses/web_bootcamp/YelpCamp/views/campgrounds/show.ejs
@@ -1,7 +1,7 @@
 <% layout('layouts/boilerplate.ejs') %>
 
 <div class="row">
-  <div class="col-6 offset-3">
+  <div class="col-6">
     <div class="card">
       <img src="<%= campground.image %>" class="card-img-top" alt="camp image">
       <div class="card-body mb-3">
@@ -24,12 +24,31 @@
       </div>
     </div>
   </div>
+  <div class="col-6">
+    <h2>Leave a review</h2>
+    <form action="/campgrounds/<%= campground._id %>/reviews" method="POST" class="mb-3 mt-3 needs-validation" novalidate>
+      <div class="mb-3">
+        <label class="form-label" for="rating">Rating</label>
+        <input class="form-control" type="range" name="review[rating]" id="rating" min="1" max="5">
+      </div>
+      <div class="mb-3">
+        <label class="form-label" for="body">Review</label>
+        <textarea class="form-control" name="review[body]" id="body" cols="30" rows="5" required></textarea>
+        <div class="valid-feedback">Looks Good</div>
+      </div>
+      <button class="btn btn-success">Submit</button>
+    </form> 
+
+    <% for (let review of campground.reviews) { %>
+      <div class="card mb-3">
+        <div class="card-body">
+          <h5 class="card-title">Rating: <%= review.rating %></h5>
+          <p class="card-text">Review: <%= review.body %></p>
+          <form action="/campgrounds/<%= campground._id %>/reviews/<%= review._id %>?_method=DELETE" method="post">
+            <button class="btn-sm btn-danger">Delete</button>
+          </form>
+        </div>
+      </div>
+    <% } %>
+  </div>
 </div>
-
-
-
-
-
-<footer>    
-                
-</footer>
